--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,7 +2,7 @@
   <as-split-area class="d-flex flex-column" [size]="card.height">
     <div class="text-secondary d-flex" style="height:30px">
       <span class="flex-fill">{{card.label}}</span>
-      <button (click)="card.parent.removeCard(card)">X</button>
+      <button (click)="card.parent.removeCard(card)" title="Remove Card">X</button>
     </div>
     <div class="flex-fill border d-flex align-items-center justify-content-center">CONTENT</div>
   </as-split-area>
