--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-container class="d-block w-100 h-100" [container]="appService.container"></app-container>
+<app-container
+  class="d-block w-100 h-100"
+  [container]="appService.container"
+></app-container>
