--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column border w-100 h-100">
-  <div class="text-primary d-flex" style="height:30px">
+  <div class="d-flex bg-navy text-white" style="height:30px">
     <span class="flex-fill">{{ container.label }}</span>
     <button (click)="addCard()" title="Add Card">+</button>
     <button
